test/expected/parse_empty_loop_body.out
shit: 2:16: error: Unable to parse the loop because its body between 'do' and 'done' is empty, a command is required there.
     2 |  while true; do done
       |                 ^~~~ here.
